--- a/sass/Layout.scss
+++ b/sass/Layout.scss
@@ -312,7 +312,9 @@ div[data-sg-type=sg-ajax]{
   //min-width: 30px;
 
 
-}.drag4a{
+}
+
+.drag4a{
   user-select: none;
   position: fixed;
   top: 50%;
