--- a/css/form.css
+++ b/css/form.css
@@ -1,260 +1,60 @@
-/* Scss Document */
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  font-family: tahoma;
-  font-size: 10pt;
-}
-
-body, html {
-  margin: 0px;
-  height: 100%;
-  padding: 10px;
-}
-
 .sg-form {
-  border: 2px solid #424242;
   padding: 4px;
-  width: 100%;
+  border: 2px solid #dadada;
+  background-color: #f0f0f0;
 }
-
-.sg-form > .head {
+.sg-form > .caption {
+  background-color: #c0c0c0;
   text-align: center;
-  background-color: #72A0A0;
-  margin: 2px;
+  color: white;
+  line-height: 2em;
+  text-transform: uppercase;
 }
-
-.sg-form > .head:after {
-  content: '+';
-  /* Unicode character for "plus" sign (+) */
+.sg-form > .page {
+  font-size: 10pt;
+  color: #6e6e6e;
+  border: 1px solid #cfcece;
+  padding: 4px;
 }
-
-.sg-menu.horizontal .caption {
-  display: none;
+.sg-form > .page > .field {
+  margin-top: 5px;
 }
-
-.sg-menu.horizontal .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.sg-form > .page > .field > .label {
+  margin-left: 10px;
+  text-transform: capitalize;
 }
-
-.sg-menu.horizontal .item button {
-  border: 0px;
-}
-
-.sg-menu.horizontal .item .icon {
-  display: none;
-}
-
-.sg-menu.horizontal li {
-  display: inline-block !important;
-}
-
-.sg-page {
-  margin: 2px;
-  border: 2px #6D5858 solid;
-}
-
-.sg-page > .head {
-  text-align: center;
+.sg-form > .page > .field > .label > .ind {
+  display: inline-block;
   color: red;
+  margin-left: 5px;
 }
-
-.sg-page > .body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+.sg-form > .page > .field > .input input {
+  color: #585858;
+  border: 1px solid #d8d7d7;
+  height: 2em;
 }
-
-.sg-page > .body > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+.sg-form > .page > .field > .input button {
+  height: 2em;
+  color: #585858;
+  border: 1px solid #d8d7d7;
 }
-
-.sg-input {
-  border: 2px solid #9F9F9F;
-  color: #5C5C5C;
-  margin: 4px;
+.sg-form > .page > .sg-menu {
+  background-color: #e4e4e4;
   padding: 4px;
-  border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  border: 2px solid #ececec;
+  margin-top: 10px;
 }
-
-.sg-input input {
-  font-size: 12pt;
-  color: #565656;
-}
-
-.ss-form, .form {
-  width: 100%;
-  background-color: #333333;
-  padding: 5px;
-  margin: 0px;
-}
-
-.ss-form .caption, .form .caption {
-  text-align: center;
-  font-weight: bold;
-  color: white;
-}
-
-.ss-form .form-group, .form .form-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.ss-form .form-group > *, .form .form-group > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-
-.ss-form .form-group .form-field, .form .form-group .form-field {
-  margin: 2px;
-  padding: 5px;
-  color: #bdbdbd;
-}
-
-.ss-form .form-group .form-field input, .ss-form .form-group .form-field select, .form .form-group .form-field input, .form .form-group .form-field select {
-  border: 1px solid #DCDCDC;
-  padding: 4px;
-}
-
-.ss-form .form-group .form-field > *, .form .form-group .form-field > * {
-  display: block;
-}
-
-.ss-form .form-nav, .form .form-nav {
-  border: 1px solid #FBFBFB;
-  background-color: rgba(27, 103, 194, 0.62);
-  margin: 2px;
-  padding: 5px;
-  text-align: right;
-}
-
-.ss-form .form-nav input, .form .form-nav input {
-  border: 0px;
-  padding: 8px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#2368b0), to(#145aa3));
-  background: linear-gradient(#2368b0, #145aa3);
-  color: white;
-}
-
-.ss-form .form-nav input:hover, .form .form-nav input:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#c02d2d), to(#e04545));
-  background: linear-gradient(#c02d2d, #e04545);
+.sg-form > .page > .sg-menu .option {
+  line-height: 2em;
+  background-color: #ff8800;
+  color: #e7e7e7;
+  border: 2px solid #ececec;
   cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
 }
-
-.ss-form1, .form {
-  width: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#e1e1e1));
-  background: linear-gradient(#f7f7f7, #e1e1e1);
-  border: 1px solid #DCDCDC;
-  padding: 5px;
-  margin: 0px;
+.sg-form > .page > .sg-menu .option:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
 }
-
-.ss-form1 .caption, .form .caption {
-  text-align: center;
-  font-weight: bold;
-  color: rgba(5, 55, 143, 0.5);
-}
-
-.ss-form1 .form-group, .form .form-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.ss-form1 .form-group > *, .form .form-group > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-
-.ss-form1 .form-group .form-field, .form .form-group .form-field {
-  background-color: rgba(232, 232, 232, 0.79);
-  border: 1px solid #FBFBFB;
-  margin: 2px;
-  padding: 5px;
-}
-
-.ss-form1 .form-group .form-field input, .ss-form1 .form-group .form-field select, .form .form-group .form-field input, .form .form-group .form-field select {
-  border: 1px solid #DCDCDC;
-  padding: 4px;
-}
-
-.ss-form1 .form-group .form-field > *, .form .form-group .form-field > * {
-  display: block;
-}
-
-.ss-form1 .form-nav, .form .form-nav {
-  border: 1px solid #FBFBFB;
-  background-color: rgba(27, 103, 194, 0.62);
-  margin: 2px;
-  padding: 5px;
-  text-align: right;
-}
-
-.ss-form1 .form-nav input, .form .form-nav input {
-  border: 0px;
-  padding: 8px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#2368b0), to(#145aa3));
-  background: linear-gradient(#2368b0, #145aa3);
-  color: white;
-}
-
-.ss-form1 .form-nav input:hover, .form .form-nav input:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#c02d2d), to(#e04545));
-  background: linear-gradient(#c02d2d, #e04545);
-  cursor: pointer;
-}
-
-.zelda {
-  background-color: #2f8bf3;
-  color: #bfffd2;
-}
-/*# sourceMappingURL=Form.css.map */
+/*# sourceMappingURL=form.css.map */
