--- a/css/grid.css
+++ b/css/grid.css
@@ -1,5 +1,6 @@
-/* sgGrid */
-table.sgGrid {
+.sg-grid {
+  font-size: 9pt;
+  overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -7,23 +8,87 @@ table.sgGrid {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  padding: 4px;
+  border: 2px solid #dadada;
+  background-color: #f0f0f0;
 }
-
-table.sgGrid thead {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
-  overflow: auto;
-  overflow-x: hidden;
-}
-
-table.sgGrid tbody {
+.sg-grid > .body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   overflow: auto;
+}
+.sg-grid > .caption {
+  background-color: #c0c0c0;
+  text-align: center;
+  color: white;
+  line-height: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.sg-grid > .nav-paginator {
+  background-color: #dbdbdb;
+  text-align: center;
+}
+.sg-grid > .grid-search {
+  text-align: center;
+  line-height: 2em;
+}
+.sg-grid > .grid-search input {
+  color: #585858;
+  border: 1px solid #d8d7d7;
+  height: 2em;
+}
+.sg-grid > .grid-search .btn-search {
+  background-color: #ff8800;
+  color: #e7e7e7;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+.sg-grid > .grid-search .btn-search:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
+}
+.sg-grid > .body > .grid-table > thead tr > td {
+  font-size: 10pt;
+  color: #6e6e6e;
+  margin-left: 10px;
+  text-transform: capitalize;
+  background-color: #e4e4e4;
+}
+.sg-grid > .body > .grid-table > tbody > tr > td {
+  color: #727272;
+}
+.sg-grid > .body > .grid-table > tbody > tr:nth-child(2n) {
+  background-color: #e9e9e9;
+}
+.sg-grid > .body > .grid-table > tbody > tr.active td > [data-name]:not(.zone-edit), .sg-grid > .body > .grid-table > tbody > tr.active td > .text:not(.zone-edit) {
+  display: none;
+}
+.sg-grid > .body > .grid-table > tbody > tr.delete > td[data-name] {
+  visibility: hidden;
+}
+.sg-grid > .sg-menu {
+  background-color: #e4e4e4;
+  padding: 4px;
+  border: 2px solid #ececec;
+  margin-top: 10px;
+}
+.sg-grid > .sg-menu .option {
+  line-height: 2em;
+  background-color: #ff8800;
+  color: #e7e7e7;
+  border: 2px solid #ececec;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+.sg-grid > .sg-menu .option:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
+}
+.sg-grid.type-edit.record-edit .edit-row td {
+  visibility: hidden;
 }
 /*# sourceMappingURL=grid.css.map */
