--- a/css/gt_command.css
+++ b/css/gt_command.css
@@ -1,16 +1,24 @@
-.gt {
+.btn-connect {
+  background-color: #45fd45;
+  color: #047248 !important;
+  padding-right: 6px !important;
+  padding-left: 6px !important;
+  text-align: center;
+}
+
+.gtxxx {
   width: 100%;
   height: 100%;
   background-color: #8fa1bb;
   overflow: auto;
 }
-.gt ._body {
+.gtxxx ._body {
   height: 100%;
   border: 2px solid green;
   padding: 10px;
   overflow: auto;
 }
-.gt ._body > * {
+.gtxxx ._body > * {
   border: 3px solid #0866b3;
   margin: 2px;
   padding: 3px;
@@ -20,34 +28,27 @@
   max-height: 300px;
   overflow: scroll;
 }
-.gt ._body > * > * {
+.gtxxx ._body > * > * {
   border: 2px solid #da0782;
   overflow: auto;
   max-height: 200px;
 }
-.gt .btn-connect {
-  background-color: #45fd45;
-  color: #047248 !important;
-  padding-right: 6px !important;
-  padding-left: 6px !important;
-  text-align: center;
-}
-.gt fform {
+.gtxxx fform {
   overflow: auto;
   border: 2px solid #63a000;
 }
-.gt fform > * {
+.gtxxx fform > * {
   overflow: auto;
 }
-.gt fform > * > * {
+.gtxxx fform > * > * {
   overflow: auto;
   border: 0px solid blue;
 }
-.gt fform > * > * > * {
+.gtxxx fform > * > * > * {
   overflow: auto;
   border: 0px solid #a04cb9;
 }
-.gt > .body {
+.gtxxx > .body {
   height: 100%;
   width: 100%;
   display: -webkit-box;
@@ -59,7 +60,7 @@
           flex-direction: row;
   overflow: auto;
 }
-.gt > .body > * {
+.gtxxx > .body > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
@@ -67,10 +68,10 @@
   margin: 10px;
   overflow: auto;
 }
-.gt > .body .p5 {
+.gtxxx > .body .p5 {
   display: none;
 }
-.gt .command_name {
+.gtxxx .command_name {
   color: #474747;
   font-weight: bold;
 }
