--- a/gt/sass/gt_command.scss
+++ b/gt/sass/gt_command.scss
@@ -1,4 +1,14 @@
-.gt{
+.btn-connect{
+	background-color: rgb(69, 253, 69);
+	color: rgb(4, 114, 72)!important;
+	//border:outset !important;
+	padding-right: 6px!important;
+	padding-left: 6px!important;
+	text-align: center;
+
+}
+
+.gtxxx{
 	width: 100%;
 	height: 100%;
 	background-color: rgb(143, 161, 187);
@@ -31,15 +41,7 @@
 	}
 
 
-	.btn-connect{
-		background-color: rgb(69, 253, 69);
-		color: rgb(4, 114, 72)!important;
-		//border:outset !important;
-		padding-right: 6px!important;
-		padding-left: 6px!important;
-		text-align: center;
-
-	}
+	
 
 	form{
 		//border:2px solid red;
