--- a/Cota/sass/cota.scss
+++ b/Cota/sass/cota.scss
@@ -33,3 +33,46 @@
 .cota-main{
 	
 }
+
+.units-info{
+    padding: 2px;
+    color:white;
+    font-size: 11px;
+    min-width: 240px;
+    display: grid;
+    height: 100%;
+    overflow: auto;
+    //grid-gap: 2px;
+    text-transform: uppercase;
+    grid-template-columns: auto 1fr;
+    //grid-template-rows: 36px 1fr;
+    >div{
+      //margin-top: 1px;
+      //border-bottom: 1px solid white;
+      background-color: rgba(102, 102, 102, 0.575);
+      padding: 3px;
+    }
+
+    >div:nth-child(2n+1){
+      color: rgb(146, 146, 146);
+      font-weight: bold;
+    }
+
+
+  }
+
+  .my-class{
+	  
+	  .mapboxgl-popup-content{
+		  // background-color: aqua;
+	  }
+  }
+  .wecar_info{
+		 background-color: rgb(24, 127, 187);
+		 color:rgb(209, 250, 255);
+		 font-size: 10px;
+		 font-weight: bold;
+		 padding: 4px;
+		 margin: 4px;
+		 min-width: 200px;
+	  }
