--- a/css/cota_main.css
+++ b/css/cota_main.css
@@ -22,4 +22,11 @@ form {
   margin: 0px;
   padding: 0px;
 }
+
+.sg-menu {
+  font-size: 12px;
+}
+.sg-menu .icon {
+  display: none;
+}
 /*# sourceMappingURL=cota_main.css.map */
