--- a/gt/sass/gt_command.scss
+++ b/gt/sass/gt_command.scss
@@ -5,6 +5,7 @@
 	padding-right: 6px!important;
 	padding-left: 6px!important;
 	text-align: center;
+	border:1px solid rgb(0, 174, 255);
 
 }
 
@@ -97,7 +98,7 @@
 }
 
 .gt-command-main{
-	//background-color: rgb(123, 187, 110);
+	background-color: rgb(231, 231, 231);
 	.caption{
 		//height: 10px;
 	}
