--- a/gt/css/gt_form.css
+++ b/gt/css/gt_form.css
@@ -1,50 +1,50 @@
-.sg-form.basic, .sg-form.sevian {
+.sg-form_2 {
   padding: 4px;
   border: 2px solid #dadada;
   background-color: #f0f0f0;
 }
-.sg-form.basic > .caption, .sg-form.sevian > .caption {
+.sg-form_2 > .caption {
   background-color: #c0c0c0;
   text-align: center;
   color: white;
   line-height: 2em;
   text-transform: uppercase;
 }
-.sg-form.basic > .page, .sg-form.sevian > .page {
+.sg-form_2 > .page {
   font-size: 10pt;
   color: #6e6e6e;
   border: 1px solid #cfcece;
   padding: 4px;
 }
-.sg-form.basic > .page > .field, .sg-form.sevian > .page > .field {
+.sg-form_2 > .page > .field {
   margin-top: 5px;
 }
-.sg-form.basic > .page > .field > .label, .sg-form.sevian > .page > .field > .label {
+.sg-form_2 > .page > .field > .label {
   margin-left: 10px;
   text-transform: capitalize;
 }
-.sg-form.basic > .page > .field > .label > .ind, .sg-form.sevian > .page > .field > .label > .ind {
+.sg-form_2 > .page > .field > .label > .ind {
   display: inline-block;
   color: red;
   margin-left: 5px;
 }
-.sg-form.basic > .page > .field > .input input, .sg-form.sevian > .page > .field > .input input {
+.sg-form_2 > .page > .field > .input input {
   color: #585858;
   border: 1px solid #d8d7d7;
   height: 2em;
 }
-.sg-form.basic > .page > .field > .input button, .sg-form.sevian > .page > .field > .input button {
+.sg-form_2 > .page > .field > .input button {
   height: 2em;
   color: #585858;
   border: 1px solid #d8d7d7;
 }
-.sg-form.basic > .page > .sg-menu, .sg-form.sevian > .page > .sg-menu {
+.sg-form_2 > .page > .sg-menu {
   background-color: #e4e4e4;
   padding: 4px;
   border: 2px solid #ececec;
   margin-top: 10px;
 }
-.sg-form.basic > .page > .sg-menu .option, .sg-form.sevian > .page > .sg-menu .option {
+.sg-form_2 > .page > .sg-menu .option {
   line-height: 2em;
   background-color: #ff8800;
   color: #e7e7e7;
@@ -53,26 +53,18 @@
   -webkit-transition: 0.5s all ease-out;
   transition: 0.5s all ease-out;
 }
-.sg-form.basic > .page > .sg-menu .option:hover, .sg-form.sevian > .page > .sg-menu .option:hover {
+.sg-form_2 > .page > .sg-menu .option:hover {
   background-color: #cf4404;
   color: #d8d7d7;
 }
 
 .sg-form.gt_cota_unit > .page {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
 }
 .sg-form.gt_cota_unit > .page > .field {
-  margin: 2px;
-}
-.sg-form.gt_cota_unit input {
-  color: #476e6e;
-  font-size: 12px;
-  font-weight: bold;
+  margin: 4px;
 }
 /*# sourceMappingURL=gt_form.css.map */
