--- a/gt/sass/cota.scss
+++ b/gt/sass/cota.scss
@@ -139,3 +139,39 @@
 .sg-grid{
   height: 100%;
 }
+
+
+.sg-message-box{
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  margin: 20px;
+  padding: 10px;
+  background-color: #0071ce;
+  border: 0px solid rgb(236, 132, 132);
+  
+  border-radius: 5px;
+  box-shadow: 6px 7px 5px -4px rgba(0,0,0,0.71);
+  user-select: none;
+  visibility:hidden;
+
+  visibility:visible;
+  opacity:1;
+
+  >.caption{
+    color:white;
+    text-align: right;
+    border-bottom: 2px solid rgb(255, 255, 255) ;
+  }
+  >.text{
+    color:aqua;
+    padding: 4px;;
+  }
+
+  &.hidden{
+    
+    visibility:hidden;
+  opacity:0;
+  transition:visibility 0.9s linear,opacity 0.9s linear;
+  }
+}
