--- a/gt/sass/cota.scss
+++ b/gt/sass/cota.scss
@@ -175,3 +175,39 @@
   transition:visibility 0.9s linear,opacity 0.9s linear;
   }
 }
+
+.subwin, #form_p10{
+  .sg-form{
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0.863);
+    .caption{
+      background-color: rgb(230, 230, 230);
+      text-align: center;
+      font-size: 13px;
+      line-height: 1.8em;
+      font-weight: bold;
+      vertical-align: middle;
+      color: rgb(7, 135, 221);
+    }
+    .page{
+      overflow: auto;
+      .field{
+        padding: 4px;
+        label{
+          color:rgb(19, 139, 187);
+          font-size: 13px;
+          padding-left: 10px;
+        }
+        input{
+          border:1px solid rgb(184, 184, 184);
+          color:rgb(122, 122, 122);
+          font-size: 12px;
+          line-height: 1.8em;
+          background-color: rgb(255, 255, 255);
+          padding-left: 4px;
+        }
+      }
+
+    }
+  }
+}
