--- a/gt/sass/cota.scss
+++ b/gt/sass/cota.scss
@@ -1,3 +1,13 @@
+.sgWin{
+  >.body{
+    //border:3px solid yellow;
+    //height: 100px;
+    >*{
+      //display: none;
+    }
+  }
+}
+
 .cota-main{
   height: 100%;
   display: flex;
