--- a/templates/gt.html
+++ b/templates/gt.html
@@ -1,16 +1,7 @@
-<div class="gt">
+<div class="gt-layout">
 	
-	<div class="banner"></div>
-	<div class="menu"></div>
-	<div class="body">
-		<div class="p4">--4--</div>
-		<div class="p5">--5--</div>
-
-	</div>
-	<div class="foot"></div>
-
-
-
-
+	<div class="banner">--1--</div>
+	<div class="menu">--3--</div>
+	<div class="body">--4--</div>
 
 </div>
