--- a/gt/css/gt.css
+++ b/gt/css/gt.css
@@ -110,6 +110,18 @@ form {
   background-image: url(../../images/marker.png);
 }
 
+.icon-image {
+  background-image: url(../../images/image.png);
+}
+
+.icon-max {
+  background-image: url(../../images/max.png);
+}
+
+.icon-min {
+  background-image: url(../../images/min.png);
+}
+
 .icon-save {
   background-image: url(../../images/save.png);
   background-repeat: no-repeat;
@@ -121,6 +133,25 @@ form {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 20px 20px;
+}
+
+.mark-tool-value {
+  border: 3px solid white;
+  width: 300px;
+  height: 120px;
+  display: grid;
+  overflow: auto;
+  grid-template-columns: repeat(8, 30px);
+  gap: 5px;
+}
+.mark-tool-value div {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.644);
+}
+.mark-tool-value div img {
+  width: 100%;
+  max-height: 100%;
 }
 
 .gt-webcar-login {
