--- a/sass/Menu.scss
+++ b/sass/Menu.scss
@@ -8,6 +8,7 @@
 @keyframes open {
 	0%{
 		opacity:0;
+		
 		transform: scale(0.5);
     	transform-origin: 0 0;
 		
@@ -15,7 +16,8 @@
 	100%{
 		opacity:1;
 		transform: scale(1);
-    	transform-origin: 0 0;
+		transform-origin: 0 0;
+		
 	}
 }
 
@@ -23,11 +25,19 @@
 	0%{
 		opacity:1;
 		visibility: visible;
+		
 	}
 
+	99%{
+		opacity:0;
+		visibility: hidden!important;
+
+	}
 	100%{
 		opacity:0;
 		visibility: hidden!important;
+		z-index: 0;
+		
 	}
 }
 
