--- a/gt/sass/gt.scss
+++ b/gt/sass/gt.scss
@@ -141,12 +141,15 @@ form{
 }
 
 .mark-tool-value{
+	background-color: rgba(255, 255, 255, 0.61);
+	width: 300px;
 	.mark-tool-g1{
 		display: flex;
 		padding: 2px;
 		justify-content: space-around;
 		
 		input{
+			width: 100px;
 			border:1px solid white;
 			background-color: rgb(245, 245, 245);
 			text-align: center;
@@ -158,13 +161,26 @@ form{
 		}
 	}
 	.mark-tool-g2{
+		
 		border: 3px solid white;
-		width: 300px;
+		
 		height: 120px;
-		display: grid;
+		
 		overflow: auto;
+		display: flex;
+		flex-wrap: wrap;
+		
+		//justify-content: space-around;
+		//justify-content: center;
+		align-content:stretch;
+		*>{
+			flex:1 1 auto;
+		}
+		/*
+		display: grid;
 		grid-template-columns: repeat(8, 30px);
 		gap: 5px;
+		*/
 		//grid-template-rows: 60px auto 1fr;
 		//overflow: auto;
 		//max-width: 400px;
@@ -173,7 +189,11 @@ form{
 			width:30px;
 			height: 30px;
 			//margin: 5px;
-			background-color: rgba(255, 255, 255, 0.644);
+			//background-color: rgb(189, 189, 189);
+			:hover{
+				cursor: pointer;
+				//background-color: rgb(255, 255, 255);
+			}
 			
 			img{
 				width: 100%;
@@ -187,6 +207,36 @@ form{
 
 
 }
+.poly-tool-main{
+	//min-width: 100px;
+	.poly-tool-info{
+		background-color: rgba(0, 0, 0, 0.61);
+		color:white;
+		//
+		padding: 8px;
+		line-height: 2em;
+		.info{
+			text-align: right;
+		}	
+		width: 100%;
+		.propertys{
+			
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			gap:5px;
+			input{
+				width: 100%;
+			}
+		}
+	}	
+	
+	
+	
+
+}
+
+
+
 .gt-webcar-login{
 	display: flex;
 	height: 100%;
